# drone_gui

./: Cargo.toml
src/: app.rs  config.rs  drone_scene.rs  input.rs  main.rs  parser.rs  persistence.rs  pid_config.rs  protocol.rs  telemetry.rs  uart.rs  video.rs
src/ui/: mod.rs
src/ui/panels/: commands.rs  connection.rs  logs.rs  mod.rs  plots.rs  viewport.rs
src/ui/windows/: mod.rs  pid_tuning.rs
