[package]
name = "drone_egui"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.42"
bevy = { version = "0.15", default-features = false, features = [
    "bevy_winit",
    "bevy_render",
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_ui",
    "wayland",  # Better support for Raspberry Pi
] }
bevy_egui = "0.31"
egui_plot = "0.29"
gilrs = "0.11.0"
serialport = "4.8.1"
ffmpeg-the-third = "4.0.1"
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
