[package]
name = "drone_egui"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.42"
bevy = "0.15"
bevy_egui = "0.31"
egui_plot = "0.29"
gilrs = "0.11.0"
serialport = "4.8.1"
ffmpeg-the-third = "4.0.1"
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
